test/expected/rerr_redirect_to_directory.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "hi"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "hi"
]
[Word
  Unquoted "/"
]
shit: 2:11: error: Could not open '/': Is a directory.
     2 |  echo hi > /
       |            ^~ here.
[Code 2]
